# py-msgpack-rpc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  cspell.json  mypy.ini  pydoctest.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
doc/: start_auto_build.sh  update_apidoc.sh
doc/source/: conf.py  index.rst  usage.rst
doc/source/change_log/: index.rst  v0.1.0a1.md  v0.1.0a2.md
doc/source/usage/: index.rst
examples/echo/: constants.py  echo_client.py  echo_server.py
py_msgpack_rpc/: __init__.py  _exceptions.py  _messages.py
py_msgpack_rpc/_client/: _async_client.py
py_msgpack_rpc/_server/: _async_server.py  _method_executor.py
scratch/: client.py  constants.py  server.py
tests/: __init__.py  test_messages.py
tests/_server/: __init__.py  test_method_executor.py
tests/integ/: test_async_client_server.py
