[tool.poetry]
name = "py-msgpack-rpc"
version = "0.1.0a2"
description = "An RPC library implementing MessagePack RPC in Python."
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/MusicScience37Projects/utility-libraries/py-msgpack-rpc"
repository = "https://gitlab.com/MusicScience37Projects/utility-libraries/py-msgpack-rpc.git"
#documentation = "TODO"
#keywords = ["TODO"]
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
msgpack = ">=1,<2"
typing-extensions = ">=4,<5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
pylint = "^3.2.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.doc.dependencies]
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
Sphinx = "^7.3.7"
doc8 = "^1.1.1"
sphinx-autobuild = "^2024.4.16"
sphinx-orange-book-theme = "^0.9.0"
myst-parser = "^3.0.1"

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D107"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,fixme"
load-plugins = "pylint.extensions.docparams"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
